# LibreCrate

./: .gitignore  CHANGELOG.md  COPYING  F-DROID.md  Makefile  README.md  build_and_test.py  docwallet_build_plan.md  gradle.properties  librecrate_build_plan.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/docwallet/data/: SessionStoreInstrumentedTest.kt
app/src/androidTest/java/com/docwallet/domain/: BackupManagerTest.kt
app/src/androidTest/java/com/docwallet/ui/: LibraryScreenTest.kt  SearchScreenTest.kt  SettingsScreenTest.kt  UnlockScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/docwallet/: DocWalletApplication.kt  MainActivity.kt
app/src/main/java/com/docwallet/data/: AppPreferencesStore.kt  PdfPreferencesStore.kt  SessionStore.kt
app/src/main/java/com/docwallet/data/db/: Converters.kt  (+2 more)
app/src/main/java/com/docwallet/domain/: BackupManager.kt  DatabaseMerger.kt
app/src/main/java/com/librecrate/app/: LibreCrateApplication.kt  MainActivity.kt
app/src/main/java/uniffi/vault_native/: vault_native.kt  vault_native.kt.bak
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/docwallet/data/: SessionStoreTest.kt
docs/: index.html  styles.css
fastlane/: Appfile  Fastfile
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt
gradle/: libs.versions.toml
reader-epub/: build.gradle.kts
reader-pdf/: build.gradle.kts
scripts/: build_native.sh
specification/: android-rust-migration.md  desktop-gui-plan.md  encryption-backup.md  review-issues.md  rust-core-plan.md
vault-cli/: build.gradle.kts
vault-cli/src/main/kotlin/com/docwallet/cli/: Argon2HasherJvm.kt  CliApp.kt  SqlHandleJdbc.kt
vault-cli/src/test/kotlin/com/docwallet/cli/: SearchIntegrationTest.kt  VaultRoundtripTest.kt
vault-core/: build.gradle.kts
vault-native/: Cargo.toml
vault-native-android/: build.gradle.kts
vault-native-android/src/main/java/uniffi/vault_native/: vault_native.kt
vault-native/cli/: Cargo.toml
vault-native/cli/src/commands/: bench.rs  document.rs  merge.rs  util.rs
vault-native/core/: Cargo.toml
vault-native/core/examples/: gen_kotlin.rs
vault-native/core/src/: error.rs  ffi.rs  lib.rs  merge.rs
vault-native/core/src/db/: fts.rs  queries.rs  schema.rs  storage.rs
vault-native/core/src/format/: export.rs
vault-native/core/src/reader/: mod.rs  pdf.rs  text.rs
vault-native/core/tests/: e2e.rs  pdf_reader.rs
vault-native/gui/: Cargo.toml
vault-native/gui/src/: app.rs  config.rs  keychain.rs  main.rs  opener.rs  vault.rs
vault-native/gui/src/screens/: collections.rs  export.rs  first_run.rs  library.rs  mod.rs  settings.rs  unlock.rs
vault-native/gui/src/widgets/: common.rs  document_card.rs  mod.rs  search_bar.rs  sidebar.rs
vault-reader/: build.gradle.kts
(+232 files in other folders)
