[package]
name = "librecrate"
version = "0.1.0"
edition = "2021"
description = "LibreCrate CLI: vault backup/restore and document management"

[[bin]]
name = "librecrate"
path = "src/main.rs"

[dependencies]
vault-native = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
tempfile = "3"
rusqlite = { version = "0.31", default-features = false, features = ["bundled-sqlcipher"] }
