[package]
name = "vault-native"
version = "0.1.0"
edition = "2021"
description = "LibreCrate vault core: encrypted backup format, SQLCipher DB, merge logic"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
aes = "0.8"
cipher = "0.4"
rusqlite = { version = "0.31", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
thiserror = "1"
uniffi = "0.28"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
uniffi_bindgen = "0.28"
camino = "1"
rusqlite = "0.31"
