[package]
name = "librecrate-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "LibreCrate desktop vault manager"

[[bin]]
name = "librecrate-gui"
path = "src/main.rs"

[dependencies]
vault-native = { path = "../core" }
iced = { version = "0.14", features = ["svg", "image", "tokio", "selector"] }
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
keyring = "4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
rfd = "0.15"
mime_guess2 = "2"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
anyhow = "1"

[dev-dependencies]
iced_test = "0.14"

